--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href="https://fonts.googleapis.com/css?family=Marck+Script|Philosopher&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
